add issue 9 all

--- a/blog/Issue9/2024-02-27-art.md
+++ b/blog/Issue9/2024-02-27-art.md
@@ -78,7 +78,7 @@ Oghenemudiakevwe Igbi and Ezinne Igbi
 
 Samuel Adeleke Joel
 
-[Read Online](/articles/issue9/) [Download](https://drive.google.com/file/d/1_97Vlkm6Vbuxi3WwZvp30rOyqDrqyKgI/view?usp=sharing)
+[Read Online](/articles/issue9/pedagogical-approach-towards-developing-early-childhood-music-education) [Download](https://drive.google.com/file/d/1_97Vlkm6Vbuxi3WwZvp30rOyqDrqyKgI/view?usp=sharing)
 
 ### Historical Overview
 
@@ -86,10 +86,10 @@ Samuel Adeleke Joel
 
 Klaudia Carlos-Machej
 
-[Read Online](/articles/issue9/) [Download](https://drive.google.com/file/d/1-elx42On_RU-TbKeVTPAEVzkLcCUu1sh/view?usp=sharing)
+[Read Online](/articles/issue9/links-between-dance-and-music-at-the-time-of-the-loss-of-polish-statehood) [Download](https://drive.google.com/file/d/1-elx42On_RU-TbKeVTPAEVzkLcCUu1sh/view?usp=sharing)
 
 ##### The Contribution To The History Of The Ballet Of Serbian National Theater In Novi Sad: Rastislav Varga (1955-2021) [In Serbian]
 
 Svenka Savić
 
-[Read Online](/articles/issue9/) [Download](https://drive.google.com/file/d/1qYXrzx3dwayKq8GW0mSQ5cHYJOR_BFYb/view?usp=sharing)
+[Read Online](/articles/issue9/rastislav-varga) [Download](https://drive.google.com/file/d/1qYXrzx3dwayKq8GW0mSQ5cHYJOR_BFYb/view?usp=sharing)
