--- a/issue9/article09/2024-02-17.mdx
+++ b/issue9/article09/2024-02-17.mdx
@@ -48,7 +48,7 @@ export function Name({ author, affil, email }) {
 
 <div className='abstract'>
 <div className='citation'>
-<strong>Citation:</strong> : Igbi, Oghenemudiakevwe and Ezinne Igbi. 2024. "Towards a Strategic Policy Formulation for Enhanced Music Directing and Ensemble Management in Nigeria." [_Accelerando: Belgrade Journal of Music and Dance 9:9_](http://localhost:3000/articles/issue8/art)
+<strong>Citation:</strong> Igbi, Oghenemudiakevwe and Ezinne Igbi. 2024. "Towards a Strategic Policy Formulation for Enhanced Music Directing and Ensemble Management in Nigeria." [_Accelerando: Belgrade Journal of Music and Dance 9:9_](http://localhost:3000/articles/issue8/art)
 
 </div>
 
