--- a/issue9/article10/2024-02-16.mdx
+++ b/issue9/article10/2024-02-16.mdx
@@ -1,8 +1,307 @@
 ---
-title:
-slug:
-description: ""
-authors: []
-tags: []
+title: '#10 Pedagogical Approach Towards Developing Early Childhood Music Education in Nigeria'
+slug: pedagogical-approach-towards-developing-early-childhood-music-education
+description: 'This paper advocates for a pedagogical approach towards developing and improving Early Childhood Music Education. Being a descriptive research, participant observation and oral interview techniques were used as instruments of data collection to harvest direct information from the ten (10) randomly selected schools in Ilorin, Kwara State. '
+authors: [joeladeleke]
+tags: [pedagogy, music education, early childhood, nursery]
 ---
 
+# #10 Pedagogical Approach Towards Developing Early Childhood Music Education in Nigeria
+
+{/* truncate */}
+
+```
+UDC: 373.2:78(669.1)
+COBISS.SR-ID 139166217 CIP - 9
+
+Received: Dec 28, 2023
+Reviewed: Jan 16, 2024
+Accepted: Jan 26, 2024
+
+```
+
+# #10 Pedagogical Approach Towards Developing Early Childhood Music Education in Nigeria
+
+export function Name({ author, affil, email }) {
+	return (
+		<p className='author'>
+			<strong>{author}</strong>
+			<span>{affil}</span>
+			<span>{email}</span>
+		</p>
+	);
+}
+
+<div className='authors'>
+	<Name
+		author='Samuel Adeleke Joel'
+		affil='Department of Music, Kwara State College of Education, Ilorin, Nigeria'
+		email='lekejoelmusic@gmail.com'
+	/>
+</div>
+
+<div className='abstract'>
+<div className='citation'>
+<strong>Citation:</strong> Joel, Samuel Adeleke. 2024. "Pedagogical Approach Towards Developing Early Childhood Music Education in Nigeria." [_Accelerando: Belgrade Journal of Music and Dance 9:10_](http://localhost:3000/articles/issue8/art)
+
+</div>
+
+<div>
+	<h4>Abstract</h4>
+	<div>
+
+    	Undoubtedly, the surest ground-breaking for solid foundation of Early Childhood Music Education hinged on systematically organised and strategically coordinated musical activities at the early stage of education. Unfortunately, despite music being a predominantly evident driving force at this level of education, many institutions still manifest ‘jé lé ó sin mi (‘let the house have peace’) mentality by demonstrating ‘cosmetic’ approach towards educational development of children under their care in general and music education in particular. Hence, this paper advocates for a pedagogical approach towards developing and improving Early Childhood Music Education. Being a descriptive research, participant observation and oral interview techniques were used as instruments of data collection to harvest direct information from the ten (10) randomly selected schools in Ilorin, Kwara State. This was complemented by Fayol’s Administrative Management theory to foreground the study. Findings revealed that most activities at this starting point of education are musical, but no single qualified music teacher was employed either as full-time or part-time to coordinate the activities. Consequently, singing out of tune, screaming and singing off-beat often characterised the children’s performances. Likewise, government only pays lip-service to this fragile stage by leaving the establishment and administration of this delicate organisation solely in the hands of the private sector. The study, however, recommends that Society of Music Educators of Nigeria (SOMEN) should consider generating a memo on the need to employ qualified Early Childhood Music educators, who will ensure balanced music education through a pragmatic pedagogical approach, as suggested and explained in this paper.
+
+    	<div>
+    		<strong>Keywords:</strong>
+    		<i>
+    			{' '}
+    			 pedagogy, music education, early childhood music educators, national policy, nursery, pre-primary schools
+    		</i>
+    	</div>
+    </div>
+
+</div>
+
+</div>
+
+<div className='text'>
+
+## Introduction
+
+The emerging contemporary challenges in the Nigerian educational sector, most especially the early childhood care education otherwise known as nursery and pre-primary school have incontrovertibly revealed the inadequacies in practice of music education towards the overall development and growth of children. Obviously, the indispensability of musical activities at the early stage of children's education cannot be overemphasised. The predominantly driving impetus at this early stage in schools is embedded in music which is primarily used to accompany, punctuate, articulate and moderate daily activities of the pupils. It is often assumed that musical activities at this level are used only as extra-curricular just to keep the interest of the pupils alive in the classroom.
+
+Our natural involvement in diverse musical activities, from cradle, has made many people ignorantly conclude that music is a mere entertainment activity that does not need any serious academic attention. This was further stressed by Stephens (1995) that music is so much a part of the background of everyday life that tends to be taken for granted. It is noteworthy that teaching and learning of music is far beyond singing and dancing. The need for music education at all levels of the Nigerian educational system is irrefragable. Hoffer (1976) reiterates that music is a complex creation to be passed along informally from one generation to another, as it is done in some primitive societies. In the same vein, Adesokan (2000) affirms that music education is an important intellectual subject, which contributes to the general growth and development of the child.
+
+It is on this premise that the paper advocates for general overhauling of all musical activities within the context of Early Childhood Care Education (ECCE), so there could be a reliable and secure foundational platform for music education to thrive freely.
+
+## Statement of the Problem
+
+The response of the Federal Government of Nigeria through its National Policy on Education (2013) to the contemporary challenges in the education sector, seemed to be proactive in terms of policy formation, but passive in policy implementation. This is contrary to the popular saying that “action speaks louder than voice”. Despite the fact that the voice of the government is at crescendo in articulating the purpose and necessity of ECCE in the National Policy on Education; her action is at the diminuendo, as seen in various nursery or pre-primary schools scattered across the country.
+
+Moreover, establishment and administration of the early stage of education are left solely in the hands of the private sector. No wonder, many of these pre-primary schools are more profit-oriented, rather than product-oriented. Musical activities being the catalyst at this early level of education is badly affected. Hence, the need for a comprehensive approach as contrary to the ‘cosmetic’ approach towards Early Childhood Music Education is germane. The present situation of music education in nursery or pre-primary schools in Nigeria is apparently begging for systemic organisation, and strategic coordination of musical activities, which is the surest ground-breaking platform for a solid foundation to emerge.
+
+## Theoretical Framework
+
+This study hinged on the administrative management theory of Henri (1916). The adaptation of Henri’s five elements of management in this study is fore-grounded in planning, organising, commanding, coordinating and controlling. The universality of these elements was theorised by Henri, as he argued that every manager performs these functions in their daily work. The elements, as stated by Ogunbameru and Oribabor (2012) have become the foundation for considering the basic process or functions of management.
+
+Having reflected on the five elements as discussed earlier, the question is where is the place of evaluation? A critical analysis of the five elements revealed that Henri seemed to have subsumed evaluation under the fifth element (controlling). In the education sector, evaluation is too essential to be marginalised. Through regular evaluation, strength and weaknesses of a system could be exposed, and the outcome would be a future guide. Thus, this is modified by the researcher and thereafter applied to Early Childhood Music Education in this study through the introduction of ‘evaluation’ as the sixth element of management. This approach gives credence to formal model showing the division of labour in terms of functions and authority. The chart below (_Figure 1_) illustrates the six elements of management.
+
+<div className='figureBox'>
+<figure>
+		<img
+			src={require('@site/issue9/article10/fig1.png').default}
+			alt='Figure 1.Five Elements of Managment of Music Education'
+		/>
+		<figcaption>
+			**Figure 1.** Five Elements of Managment of Music Education. Source: Henri’s Administrative Management Theory: Concept and Principles Expanded and modified by Joel (Joel 2021).
+		</figcaption>
+	</figure>
+
+</div>
+
+The contemporary challenges threatening the effectiveness and the desired excellent features of Early Childhood Music Education could be alienated through the modified Henri’s administrative management theory if the six primary elements are carefully, intelligently and diligently applied to all the musical activities. When there is proper planning, systemic organisation, effective commanding, strategic coordination, efficient control, and comprehensive evaluation in the teaching and learning of music at the early stage, a solid foundation for music education would be guaranteed.
+
+The Federal Government of Nigeria and proprietors of pre-primary schools should be reminded of the fourteen guiding principles of Henri captured by Kuper and Kuper (1996), as stressed by Oribabor (2012) in the application of the administrative management theory to Early Childhood Music Education. These include: division of work, authority, discipline, unity of command, unity of direction, subordination of individual interest, remuneration, centralisation, scalar chain, order, equity, stability of tenure of personnel, initiative and espirit de corps. The discovery of a set of principles, which the theory relies upon, will afford inestimable guides to the construction of a rational efficient framework for management of music education in the nursery or pre-primary schools in Nigeria.
+
+## Methodology
+
+The study employs descriptive methods, reinforced with participant observation and unstructured oral interviews, as instruments for data collection in order to gather first-hand information from the ten (10) randomly selected pre-primary schools in Ilorin, Kwara State. The researcher, with his research assistants, personally visited the sampled schools for close observation and active participation in the activities. A staff of each of the selected schools was engaged in an oral interview to further clarify and confirm the observed situation. Textual materials and the Internet source were consulted to corroborate the submission in this study.
+
+## Conceptualising Early Childhood Music Education
+
+Generally, music education has been described from different perspectives by many Nigerian music scholars who showed interest in teaching and learning of music at different levels of education. Omibiyi (1987) explained music education as a comprehensive education system; geared towards a functional and artistic career in the society. As a rider to this submission, Ekwueme (1999) buttresses that music education ensures a complete integration of cognitive, affective, social-cultural, psychomotor and aesthetic goals in the development of the students at different levels of education. Early Childhood Care Education, informed by nursery or pre-school, is inclusive and officially recognised by the Federal Government of Nigeria through its National Policy on Education (2013). Music education may be described as strategically coordinated teaching and learning of various aspects of music with the fundamental purpose of developing the learners intellectually, vocationally, emotionally, physically and socially. It is now emphasised to be the starting level of formal education to develop the totality of a person/human being - his body, mind and soul.
+
+Early Childhood Music Education may be explained as foundational study of music at the early stage in life (often from age 3 to 5), so that the child would be adequately prepared for the future. It is a form of rudimentary musical concepts packaged for the overall developmental process of pre-primary school pupils, so that the three domains of learning might find impactful expression in their lives and character. In addition, it is a foundational preparatory stage for subsequent teaching and learning of music at higher levels, in order to secure the pictured future of music education.
+
+## A Panorama of Early Childhood Music Education (ECME) within the Context oF Early Childhood Care Education (ECCE)
+
+Early Childhood Education in the form of nursery school or pre-primary education, as we know it today in Nigeria, is largely a post-colonial development, as observed by Usman (2013). The nature of it during the colonial era were kindergarten and infants’ classes otherwise labelled as ‘jé lé ó sin mi – meaning- ‘let the house have peace’ among the Yoruba ethnic group which consisted of groups of children considered not yet ripe and ready for primary education. The putative reason why most parents at the time enrolled their wards in ‘jé lé ó sin mi was to allow some peace at home, so that other assignments could be attended to while their wards are away. Little did the parents realise that this is the formative stage of children's life that could make or mar the overall developmental process of the pupils.
+
+It is unfortunate from the observation and findings from the sampled schools that despite music, being a predominantly obvious driving force at the nursery or pre-primary schools, features of ‘jé lé ó sin mi (‘let the house have peace’) mentality is still noticeable in the institutions. While lip-service by the Federal Government of Nigeria is confirmed, the institutions demonstrate a ‘cosmetic’ approach towards educational development of the children under their care. This is visible in the handling of most musical activities.
+
+The specific areas of focus in the nursery schools visited include the teacher, the students, curriculum, methodology, physical environment and instructional materials, which entails musical instruments. This was done _vis-à-vis_ Henri’s administrative management theory as modified and expanded by the researcher. The selected teachers across the ten (10) schools were observed and catechised about their professionalism in handling the musical activities at this early stage of education. Amazingly, no single qualified music teacher was employed to coordinate the musical activities. Most teachers in the sampled schools are either just completed secondary education or on teaching practice or fresh NCE graduates who never studied music. Consequently, singing out-of-tune, screaming and singing off-beat often characterised the children music performances. Also, bad breath control and wrong posture for singing were evident. Both the teachers and pupils ignorantly disregard fundamentals of singing. This is because the teacher is not knowledgeable about breath control technique and singing posture method. For example, the simple posture principle of ‘stand-up; stand straight’, ‘sit down; sit up’ was ignored while pupils were singing. Foundation for good posture and effective breath control is better laid at this early stage so that the pupils can grow to develop the technique until it becomes part of their lives.
+
+The place of qualified teacher is highly essential to harness and coordinate other earlier mentioned elements that constitute a good learning environment. Apart from teaching, it is the responsibility of early childhood music teachers to interpret the music syllabus through preparation of scheme of work and lesson notes. Sadly, sampled schools the researcher visited in the course of the study were unable to provide evidence of lesson note preparation, while schools who provided were not up-to-date. In addition, the few whose lesson notes were up-to-date were awkwardly prepared. Failure to plan is planning to fail. Good preparation is the bedrock for a successful task (Joel 2021). Planning is a process of identifying in advance what is expected to be done (objectives), how it will be done (methodology), what the timeline and responsibility for execution (duration and involvement of teachers and pupils) are, and what process of knowing the level of achieving the planned exercise (evaluation).
+
+All effort to access a certified music syllabus in the sampled schools proved abortive. The defects of musical performances in the ten (10) schools show some curious similitude, especially in the aspect of vocal production and aural perception. Vocal production is beyond mere opening of mouth to sing. Pupils must be guided to ensure good vibrato and accurate tone colour, that is, timbre. Naturally, children are very playful. Their attention is usually focused on most interesting activity among enticing alternatives around them. Hearing does not necessarily suggest listening. Not all those who hears are actually listening. On the one hand, hearing connotes process, function or power of perceiving sound. Listening, on the other hand, simply means to pay attention to sound; to hear sound with thoughtful attention, and to give consideration to the sound. Okonkwo (1989) in Udensi (2003) advised that the type of music that could be used as induction in teaching of other subject topics should be tuneful, interesting, memorable, imaginative and relevant to the topic in order to arrest the pupils’ attention throughout the course of the lesson.
+
+The assumption that Music as a subject is not on the timetable is false; there is hardly any day of the week that Music does not feature prominently on the timetable. The issue is with how the music lesson is taught and coordinated. It was revealed through participant observation technique that the teachers often used songs to teach other concepts like alphabets, colour, numbers, basic health habits, poem recitation, moral lessons and culture. The main concern is that many of the songs performed, or educative musical films watched and listened to, by the pupils are foreign. A typical example of a song sang in almost all sampled pre-primary schools in Ilorin is “Twinkle, twinkle little star” written by a foreigner named Jane Taylor (see _Example 1_). It was originally a poem published in her book "Rhymes for Nursery" in London in 1806. Obviously, the music is older than the lyrics, because the tune is from the French melody "Ah! Vous dirai-je, Maman" composed by Mozart at the age of 25, in the early 1780s.
+
+<div className='figureBox'>
+<figure>
+		<img
+			src={require('@site/issue9/article10/ex1.png').default}
+			alt='Example 1. Score of Twinkle, twinkle, little star.'
+		/>
+		<figcaption>
+			**Example 1.** "Twinkle, twinkle, little star." Source: Fluteflute, Public domain, via [Wikimedia Commons](https://commons.wikimedia.org/wiki/File:Twinkle_Twinkle_Sheet_Music.png)
+		</figcaption>
+	</figure>
+
+</div>
+
+"Twinkle, twinkle little star" musical score consists of twelve (12) bars. Although the piece is written in simple melodic and rhythmic pattern, the way bar 7 (dia-mond) is being sung contradicted the staff notation. In the score, the word diamond has two crotchets but the performance has two quavers and a crotchet underlying the word dia-mond. Reason for this contradiction is not far-fetched. Distraction is inevitable when there is absolute reliance on oral transmission of knowledge. A teacher who cannot read a musical score will never bother to look for the score. Such teacher depends on orality as against written documentation. The tune has been made very popular by adapting it for singing Alphabets, that is, A B C D E F G, etc.
+
+"St. Bees" (see _Example 2_) composed by John Bacchus Dykes in 1862 is another tune adopted in Nigeria pre-primary schools. It is usually sung just before the long break time to the following texts:
+
+<div className='poetry'>
+
+```
+Some have food but cannot eat,
+some can eat but have no food,
+we have food and we can eat,
+glory be to thee o Lord.
+```
+
+</div>
+
+<div className='figureBox'>
+<figure>
+		<img
+			src={require('@site/issue9/article10/ex2.png').default}
+			alt='Example 2. Score of St. Bees by John Bacchus Dykes'
+		/>
+		<figcaption>
+			**Example 2.** "St. Bees" by John Bacchus Dykes. Source: author's archive.
+		</figcaption>
+	</figure>
+
+</div>
+
+The performance of the songs in the pre-primary schools visited exposed another contradiction between bar 4 (no food) with one crotchet plus a minim and the actual performance with two quavers plus a minim. It should be noted that the song has 7.7.7.7 as its meter and is often performed on FMajor or GMajor, as against the score in Ab Major. Performance of the song on the set key, (Ab Major), sounds clearer, brighter and more convenient.
+
+Consequently, watching educative musical films is in vogue at the sampled pre-primary schools. It was observed that the majority of the musical films are foreign films. These include Hap Palmer production, "Donut Man" with Robert C, Evans, "Miss Phipps and Snoothy", "Big Boy", "Mr. Bin", "Jungle books" with Goodman and Osment, just to mention a few. How would the pupils be conversant with Nigerian cultural values if all the films they watch are foreign? This is a challenge for all Nigerian music composers.
+
+There are two songs performed by the pupils, which caught the attention of the researcher in the course of the observation. One was in English, while the other was rendered in Yoruba language. The two songs emphasised personal hygiene, they are very relevant and crucial, especially during this period of the COVID-19 protocol. The first song goes thus:
+
+<div className='poetry'>
+
+```
+This is the way we wash our hands,
+wash our hands, wash our hands,
+this is the way we wash our hands,
+so early in the morning.
+
+This is the way we wash our face,
+wash our face, wash our face,
+this is the way we wash our face,
+so early in the morning.
+
+This is the way we brush our teeth,
+brush our teeth, brush our teeth,
+this is the way we brush our teeth,
+so early in the morning.
+
+This is the way we comb our hair,
+comb our hair, comb our hair,
+this is the way we comb our hair,
+so early in the morning.
+```
+
+</div>
+
+Through the song (_Example 3_), pupils are taught how to take good care of their body. The song dedicates each stanza to each visible part of the body (hands, face, teeth and hair) for regular cleaning and washing. They are reminded of routine personal hygiene. It is mandatory for them to always do all of these on a daily basis, especially early in the morning until perpetual activity becomes habitual action.
+
+<div className='figureBox'>
+<figure>
+		<img
+			src={require('@site/issue9/article10/ex3.png').default}
+			alt='Example 3. Score of This is the way we wash our hands'
+		/>
+		<figcaption>
+			**Example 3.** "This is the way we wash our hands." Source: author's archive.
+		</figcaption>
+	</figure>
+
+</div>
+
+The second song, ‘Jí k’ó ro rín’, was performed in Yoruba language (see _Example 4_):
+
+<div className='poetry'>
+
+```
+Jí k’ó ro rín, wè kí o mó
+rée kán ná re, fa soò r
+jeun tó dá ra lá sí kò, má jeun jù
+
+[Wake up, brush your teeth, take your bath to be clean
+trim your finger nails, wash your cloth
+eat good food on time, do not over feed]
+```
+
+</div>
+
+<div className='figureBox'>
+<figure>
+		<img
+			src={require('@site/issue9/article10/ex4.png').default}
+			alt='Example 4. Score of Jí k’ó ro rín'
+		/>
+		<figcaption>
+			**Example 4.** "Jí k’ó ro rín." Source: author's archive.
+		</figcaption>
+	</figure>
+
+</div>
+
+The actions and gesticulations used to accompany the songs are commendable. These two songs are likely to linger more in the memory of the pupils for a long time. This type of songs with mode of performance cannot be forgotten easily. By implication, personal hygiene is entrenched in the minds of the pupils.
+
+Actually, apart from _Jí k’ó ro rín_, there is a sizable number of Yoruba songs performed to teach personal hygiene and ensure continuity of cultural values, virtues and ethos. _Ì mó tó tó_ (_Good hygiene_) is a very good example. It extended personal hygiene to cleaning of immediate environment (_Example 5_):
+
+<div className='figureBox'>
+<figure>
+		<img
+			src={require('@site/issue9/article10/ex5.png').default}
+			alt='Example 5. Score of Ì mó tó tó'
+		/>
+		<figcaption>
+			**Example 5.**  "Ì mó tó tó." Source: author's archive.
+		</figcaption>
+	</figure>
+
+</div>
+
+The textual contents of _Ì mó tó tó_ aligned with the popular saying that “prevention is better than cure”. Regular hygiene automatically regulates spread of diseases. Practicality of cleanliness was demonstrated by the pupils through their appearances and general neatness of the school’s environment. As at the time of visit, there was a gross dearth of musical instruments for teaching and learning. Although all the ten schools visited have audio-visual set like television and several toys for children’s enjoyment, but the only available musical instruments in the three (3) schools are portable drums. No keyboard instrument was available. Most of the time, the teacher and pupils start singing on different keys, before probably arriving at a compromise. This is not a good musical omen. Pupils should be taught how to sing a song on a particular prescribed key, otherwise cacophony might be inevitable.
+
+All the challenges identified waging war against survival of ideal Early Childhood Music Education could be attributed to complacency on the part of the Federal Government, the proprietors and the teachers. The trio has control over policy formulation and policy implementation. Curriculum development, implementation and interpretation are the responsibilities of the trio respectively. It is not enough for the Federal Government of Nigeria to formulate a policy about Early Childhood Care Education (ECCE) and leave the establishment and administration of the schools in the hands of proprietors and teachers only, if any meaningful development is expected. This is why it is stated earlier in the study that Henri’s administrative management theory, as modified by the researcher, would be of great help to develop Early Childhood Music Education.
+
+____________________
+
+## Conclusion
+
+Developing Early Childhood Music Education in Nigeria through a pragmatic pedagogical approach must be firmly rooted in proper and adequate planning to picture in advance the success roadmap process of the task; systemic organisation - through provision of human, financial and material resources; effective commanding - by providing motivation, support and supervision for the employees; strategic coordination to synchronise all departments, units and activities to ensure success of the plan; efficient controlling for checks and balance of the activities of the personnel towards the action plan; and comprehensive evaluation of the entire system or programme in order to identify areas of strength and weakness for better future outcome.
+
+#### Recommendations for Early Childhood Music Education in Nigeria
+
+The following recommendations should be considered for developing an ideal Early Childhood Music Education in Nigeria:
+- Society of Music Educators of Nigeria (SOMEN) should consider generating a memo on the need to have qualified Early Childhood Music Educators who will handle music education at the nursery or pre-primary schools. Children's education has special peculiarities, hence specialists in this area are indispensable to handle musical activities of the pupils.
+- A call for total departure from ‘cosmetic’ approach to comprehensive approach is being advocated for in this study. The Federal Government is advised to sincerely play her parts by ensuring general overhauling of the Early Childhood Care Education. Government should not leave the establishment and administration of this fragile level of education solely in the hands of the private sector. The Yoruba proverb says: “Àti kékeré latí n pè ka ìrókò, ní to rí tí ó bá dà gbà tán enu ò ní káa mó”. This literarily means a child is better moulded at infant, else it becomes difficult to have control over him when he becomes an adult.
+- Proprietors and teachers should look beyond monetary gain, as they invest in the pupils’ lives. All the essential instrumental materials should be provided for the teachers to teach. At least, a portable electronic keyboard should be made available to accompany singing activity in the school. Children are the future of the nation. Guiding their present jealously is guarding their future judiciously. Since most of their activities at infant are musical, then there should be serious concern about how the activities will be systematically organised and strategically coordinated so that a solid foundation can be laid for Early Childhood Music Education to survive and thrive.
+
+_____________________
+
+## References
+
+<div className='references'>
+
+1. Adesokan, Z.A. 2000. "Music: A living power in Nigerian educational system." _Journal of Nigerian Music Education, 1(1): 27-34_. 
+2. Ekwueme, L.U.1999. "Need for music education in our secondary schools." In _Lagos series in education_. Edited by E. O. Obe et al. Lagos: Faculty of Education, University of Lagos.
+3. Henri, Fayol. 1916. _Administrative Management Theory: Concept and Principles_.
+4. Federal Government of Nigeria. 2013. _National Policy on Education. 6th edition_. Lagos: NERDC Printing Press.
+5. Hoffer, C.R. 1976. _The understanding of music_. California: Wadsworth Publishing Company Inc.
+6. Joel, S.A. 2021. "Lesson plan preparation for teaching music and assessment format for teaching practice." _Book of reading on teaching practice_. Kwara State College of Education, Ilorin. (In Press) 
+7. Kuper, A. and J. Kuper. 1996. _The social science encyclopedia. 2nd Ed_. London: Routledge.
+8. Omibiyi, M. K. 1987. "Whither music education in Nigeria." A paper presented at the _First National Conference of Nigerian Association of Music Education_, Awka.
+9. Oribabor, E. P. 2012. "Approaches to organisation theory: Classical neo-classical management theories." In _Industrial sociology_. Edited by O. A. Ogunbameru & E. P. Oribabor. Ibadan: Penthouse Publications (Nig.)
+10. Stephens, J. 1995. "The national curriculum for music." In _Teaching music in the national curriculum_. Edited by G. Pratt & J. Stephens. Oxford: Heinemann Educational Publishers.
+11. Udensi, J. K. 2003. "Music: An instructional medium for teaching various subjects in the pre-primary school system." _Journal of Languages, Arts and Social Sciences (JOLASS) (2): 164-174_.
+12. Usman, M. 2013. "Early childhood education for exceptional children: Problems and prospects." In _Child care and special needs education in Nigeria, (4): 129-139_. Edited by O. Akinola. Abuja: Centre for Learning Disabilities and Audiology (CELDA).
+
+</div>
+
+<div className='up'>
+	<a href='#'>![Go to top](../up.png)</a>
+</div>
+
+</div>
